--- a/Allias/View/Base.lproj/Main.storyboard
+++ b/Allias/View/Base.lproj/Main.storyboard
@@ -132,7 +132,7 @@
             </objects>
             <point key="canvasLocation" x="2554" y="-617"/>
         </scene>
-        <!--Title-->
+        <!--Game Info View Controller-->
         <scene sceneID="yZH-eH-CN7">
             <objects>
                 <viewController storyboardIdentifier="GameInfoStoryboard" modalPresentationStyle="fullScreen" id="Tst-v0-6hu" customClass="GameInfoViewController" customModule="Allias" customModuleProvider="target" sceneMemberID="viewController">
@@ -294,7 +294,6 @@
                             </userDefinedRuntimeAttribute>
                         </userDefinedRuntimeAttributes>
                     </view>
-
                     <navigationItem key="navigationItem" id="uIl-cM-j7s">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="dnd-Z9-wNN"/>
                     </navigationItem>
@@ -311,7 +310,6 @@
         <!--New Team-->
         <scene sceneID="S16-uN-3E0">
             <objects>
-
                 <tableViewController id="Jdv-yk-KK5" customClass="NewTeamViewController" customModule="Allias" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="LZ9-nJ-3Ne">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
@@ -1371,7 +1369,6 @@
             </objects>
             <point key="canvasLocation" x="1795.6521739130437" y="723.88392857142856"/>
         </scene>
-
         <!--Navigation Controller-->
         <scene sceneID="vAi-QA-4bs">
             <objects>
